AIC/Practica 4/prac04/input.yacc.output
Terminals which are not used

   FORM_INM_A


Grammar

    0 $accept: r_inicio $end

    1 @1: /* empty */

    2 r_inicio: LABEL @1 r_linea_ensamblador
    3         | r_linea_ensamblador
    4         | /* empty */

    5 @2: /* empty */

    6 r_linea_ensamblador: r_directiva NL @2 r_inicio

    7 @3: /* empty */

    8 r_linea_ensamblador: r_instruccion NL @3 r_inicio

    9 @4: /* empty */

   10 r_linea_ensamblador: NL @4 r_inicio

   11 r_directiva: DE_DATA
   12            | DE_TEXT

   13 @5: /* empty */

   14 r_directiva: DE_BYTE @5 r_lista_enteros

   15 @6: /* empty */

   16 r_directiva: DE_HALF @6 r_lista_enteros

   17 @7: /* empty */

   18 r_directiva: DE_WORD @7 r_lista_enteros

   19 @8: /* empty */

   20 r_directiva: DE_DWORD @8 r_lista_enteros

   21 @9: /* empty */

   22 r_directiva: DE_FLOAT @9 r_lista_reales

   23 @10: /* empty */

   24 r_directiva: DE_DOUBLE @10 r_lista_reales
   25            | DE_SPACE T_INT_LIT

   26 @11: /* empty */

   27 r_lista_enteros: T_INT_LIT @11 r_lista_enteros_cont

   28 r_lista_enteros_cont: ',' r_lista_enteros
   29                     | /* empty */

   30 @12: /* empty */

   31 r_lista_reales: T_FP_LIT @12 r_lista_reales_cont

   32 @13: /* empty */

   33 r_lista_reales: T_INT_LIT @13 r_lista_reales_cont

   34 r_lista_reales_cont: ',' r_lista_reales
   35                    | /* empty */

   36 r_inmediato: T_INT_LIT
   37            | T_ALPHANUM

   38 r_posicion: T_INT_LIT
   39           | T_ALPHANUM

   40 r_instruccion: INST_NOP
   41              | FORM_INM_L REG_FP ',' r_inmediato '(' REG_INT ')'
   42              | FORM_INM_S REG_FP ',' r_inmediato '(' REG_INT ')'
   43              | FORM_INM_L REG_INT ',' r_inmediato '(' REG_INT ')'
   44              | FORM_INM_S REG_INT ',' r_inmediato '(' REG_INT ')'
   45              | FORM_INM_B REG_INT ',' r_posicion
   46              | FORM_INM_B REG_INT ',' REG_INT ',' r_inmediato
   47              | FORM_INM_B r_posicion
   48              | FORM_REG_F REG_FP ',' REG_FP ',' REG_FP
   49              | FORM_REG_F REG_FP ',' REG_FP
   50              | FORM_REG_I REG_INT ',' REG_INT ',' REG_INT
   51              | FORM_REG_I REG_INT ',' REG_INT ',' r_inmediato
   52              | FORM_INM_T T_INT_LIT


Terminals, with rules where they appear

$end (0) 0
'(' (40) 41 42 43 44
')' (41) 41 42 43 44
',' (44) 28 34 41 42 43 44 45 46 48 49 50 51
error (256)
NL (258) 6 8 10
T_INT_LIT (259) 25 27 33 36 38 52
T_FP_LIT (260) 31
T_ALPHANUM (261) 37 39
REG_INT (262) 41 42 43 44 45 46 50 51
REG_FP (263) 41 42 48 49
DE_DATA (264) 11
DE_TEXT (265) 12
DE_BYTE (266) 14
DE_HALF (267) 16
DE_WORD (268) 18
DE_DWORD (269) 20
DE_FLOAT (270) 22
DE_DOUBLE (271) 24
DE_SPACE (272) 25
INST_NOP (273) 40
FORM_INM_L (274) 41 43
FORM_INM_S (275) 42 44
FORM_INM_A (276)
FORM_INM_B (277) 45 46 47
FORM_INM_T (278) 52
FORM_REG_F (279) 48 49
FORM_REG_I (280) 50 51
LABEL (281) 2


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
r_inicio (31)
    on left: 2 3 4, on right: 0 6 8 10
@1 (32)
    on left: 1, on right: 2
r_linea_ensamblador (33)
    on left: 6 8 10, on right: 2 3
@2 (34)
    on left: 5, on right: 6
@3 (35)
    on left: 7, on right: 8
@4 (36)
    on left: 9, on right: 10
r_directiva (37)
    on left: 11 12 14 16 18 20 22 24 25, on right: 6
@5 (38)
    on left: 13, on right: 14
@6 (39)
    on left: 15, on right: 16
@7 (40)
    on left: 17, on right: 18
@8 (41)
    on left: 19, on right: 20
@9 (42)
    on left: 21, on right: 22
@10 (43)
    on left: 23, on right: 24
r_lista_enteros (44)
    on left: 27, on right: 14 16 18 20 28
@11 (45)
    on left: 26, on right: 27
r_lista_enteros_cont (46)
    on left: 28 29, on right: 27
r_lista_reales (47)
    on left: 31 33, on right: 22 24 34
@12 (48)
    on left: 30, on right: 31
@13 (49)
    on left: 32, on right: 33
r_lista_reales_cont (50)
    on left: 34 35, on right: 31 33
r_inmediato (51)
    on left: 36 37, on right: 41 42 43 44 46 51
r_posicion (52)
    on left: 38 39, on right: 45 47
r_instruccion (53)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52,
    on right: 8


state 0

    0 $accept: . r_inicio $end

    NL          shift, and go to state 1
    DE_DATA     shift, and go to state 2
    DE_TEXT     shift, and go to state 3
    DE_BYTE     shift, and go to state 4
    DE_HALF     shift, and go to state 5
    DE_WORD     shift, and go to state 6
    DE_DWORD    shift, and go to state 7
    DE_FLOAT    shift, and go to state 8
    DE_DOUBLE   shift, and go to state 9
    DE_SPACE    shift, and go to state 10
    INST_NOP    shift, and go to state 11
    FORM_INM_L  shift, and go to state 12
    FORM_INM_S  shift, and go to state 13
    FORM_INM_B  shift, and go to state 14
    FORM_INM_T  shift, and go to state 15
    FORM_REG_F  shift, and go to state 16
    FORM_REG_I  shift, and go to state 17
    LABEL       shift, and go to state 18

    $default  reduce using rule 4 (r_inicio)

    r_inicio             go to state 19
    r_linea_ensamblador  go to state 20
    r_directiva          go to state 21
    r_instruccion        go to state 22


state 1

   10 r_linea_ensamblador: NL . @4 r_inicio

    $default  reduce using rule 9 (@4)

    @4  go to state 23


state 2

   11 r_directiva: DE_DATA .

    $default  reduce using rule 11 (r_directiva)


state 3

   12 r_directiva: DE_TEXT .

    $default  reduce using rule 12 (r_directiva)


state 4

   14 r_directiva: DE_BYTE . @5 r_lista_enteros

    $default  reduce using rule 13 (@5)

    @5  go to state 24


state 5

   16 r_directiva: DE_HALF . @6 r_lista_enteros

    $default  reduce using rule 15 (@6)

    @6  go to state 25


state 6

   18 r_directiva: DE_WORD . @7 r_lista_enteros

    $default  reduce using rule 17 (@7)

    @7  go to state 26


state 7

   20 r_directiva: DE_DWORD . @8 r_lista_enteros

    $default  reduce using rule 19 (@8)

    @8  go to state 27


state 8

   22 r_directiva: DE_FLOAT . @9 r_lista_reales

    $default  reduce using rule 21 (@9)

    @9  go to state 28


state 9

   24 r_directiva: DE_DOUBLE . @10 r_lista_reales

    $default  reduce using rule 23 (@10)

    @10  go to state 29


state 10

   25 r_directiva: DE_SPACE . T_INT_LIT

    T_INT_LIT  shift, and go to state 30


state 11

   40 r_instruccion: INST_NOP .

    $default  reduce using rule 40 (r_instruccion)


state 12

   41 r_instruccion: FORM_INM_L . REG_FP ',' r_inmediato '(' REG_INT ')'
   43              | FORM_INM_L . REG_INT ',' r_inmediato '(' REG_INT ')'

    REG_INT  shift, and go to state 31
    REG_FP   shift, and go to state 32


state 13

   42 r_instruccion: FORM_INM_S . REG_FP ',' r_inmediato '(' REG_INT ')'
   44              | FORM_INM_S . REG_INT ',' r_inmediato '(' REG_INT ')'

    REG_INT  shift, and go to state 33
    REG_FP   shift, and go to state 34


state 14

   45 r_instruccion: FORM_INM_B . REG_INT ',' r_posicion
   46              | FORM_INM_B . REG_INT ',' REG_INT ',' r_inmediato
   47              | FORM_INM_B . r_posicion

    T_INT_LIT   shift, and go to state 35
    T_ALPHANUM  shift, and go to state 36
    REG_INT     shift, and go to state 37

    r_posicion  go to state 38


state 15

   52 r_instruccion: FORM_INM_T . T_INT_LIT

    T_INT_LIT  shift, and go to state 39


state 16

   48 r_instruccion: FORM_REG_F . REG_FP ',' REG_FP ',' REG_FP
   49              | FORM_REG_F . REG_FP ',' REG_FP

    REG_FP  shift, and go to state 40


state 17

   50 r_instruccion: FORM_REG_I . REG_INT ',' REG_INT ',' REG_INT
   51              | FORM_REG_I . REG_INT ',' REG_INT ',' r_inmediato

    REG_INT  shift, and go to state 41


state 18

    2 r_inicio: LABEL . @1 r_linea_ensamblador

    $default  reduce using rule 1 (@1)

    @1  go to state 42


state 19

    0 $accept: r_inicio . $end

    $end  shift, and go to state 43


state 20

    3 r_inicio: r_linea_ensamblador .

    $default  reduce using rule 3 (r_inicio)


state 21

    6 r_linea_ensamblador: r_directiva . NL @2 r_inicio

    NL  shift, and go to state 44


state 22

    8 r_linea_ensamblador: r_instruccion . NL @3 r_inicio

    NL  shift, and go to state 45


state 23

   10 r_linea_ensamblador: NL @4 . r_inicio

    NL          shift, and go to state 1
    DE_DATA     shift, and go to state 2
    DE_TEXT     shift, and go to state 3
    DE_BYTE     shift, and go to state 4
    DE_HALF     shift, and go to state 5
    DE_WORD     shift, and go to state 6
    DE_DWORD    shift, and go to state 7
    DE_FLOAT    shift, and go to state 8
    DE_DOUBLE   shift, and go to state 9
    DE_SPACE    shift, and go to state 10
    INST_NOP    shift, and go to state 11
    FORM_INM_L  shift, and go to state 12
    FORM_INM_S  shift, and go to state 13
    FORM_INM_B  shift, and go to state 14
    FORM_INM_T  shift, and go to state 15
    FORM_REG_F  shift, and go to state 16
    FORM_REG_I  shift, and go to state 17
    LABEL       shift, and go to state 18

    $default  reduce using rule 4 (r_inicio)

    r_inicio             go to state 46
    r_linea_ensamblador  go to state 20
    r_directiva          go to state 21
    r_instruccion        go to state 22


state 24

   14 r_directiva: DE_BYTE @5 . r_lista_enteros

    T_INT_LIT  shift, and go to state 47

    r_lista_enteros  go to state 48


state 25

   16 r_directiva: DE_HALF @6 . r_lista_enteros

    T_INT_LIT  shift, and go to state 47

    r_lista_enteros  go to state 49


state 26

   18 r_directiva: DE_WORD @7 . r_lista_enteros

    T_INT_LIT  shift, and go to state 47

    r_lista_enteros  go to state 50


state 27

   20 r_directiva: DE_DWORD @8 . r_lista_enteros

    T_INT_LIT  shift, and go to state 47

    r_lista_enteros  go to state 51


state 28

   22 r_directiva: DE_FLOAT @9 . r_lista_reales

    T_INT_LIT  shift, and go to state 52
    T_FP_LIT   shift, and go to state 53

    r_lista_reales  go to state 54


state 29

   24 r_directiva: DE_DOUBLE @10 . r_lista_reales

    T_INT_LIT  shift, and go to state 52
    T_FP_LIT   shift, and go to state 53

    r_lista_reales  go to state 55


state 30

   25 r_directiva: DE_SPACE T_INT_LIT .

    $default  reduce using rule 25 (r_directiva)


state 31

   43 r_instruccion: FORM_INM_L REG_INT . ',' r_inmediato '(' REG_INT ')'

    ','  shift, and go to state 56


state 32

   41 r_instruccion: FORM_INM_L REG_FP . ',' r_inmediato '(' REG_INT ')'

    ','  shift, and go to state 57


state 33

   44 r_instruccion: FORM_INM_S REG_INT . ',' r_inmediato '(' REG_INT ')'

    ','  shift, and go to state 58


state 34

   42 r_instruccion: FORM_INM_S REG_FP . ',' r_inmediato '(' REG_INT ')'

    ','  shift, and go to state 59


state 35

   38 r_posicion: T_INT_LIT .

    $default  reduce using rule 38 (r_posicion)


state 36

   39 r_posicion: T_ALPHANUM .

    $default  reduce using rule 39 (r_posicion)


state 37

   45 r_instruccion: FORM_INM_B REG_INT . ',' r_posicion
   46              | FORM_INM_B REG_INT . ',' REG_INT ',' r_inmediato

    ','  shift, and go to state 60


state 38

   47 r_instruccion: FORM_INM_B r_posicion .

    $default  reduce using rule 47 (r_instruccion)


state 39

   52 r_instruccion: FORM_INM_T T_INT_LIT .

    $default  reduce using rule 52 (r_instruccion)


state 40

   48 r_instruccion: FORM_REG_F REG_FP . ',' REG_FP ',' REG_FP
   49              | FORM_REG_F REG_FP . ',' REG_FP

    ','  shift, and go to state 61


state 41

   50 r_instruccion: FORM_REG_I REG_INT . ',' REG_INT ',' REG_INT
   51              | FORM_REG_I REG_INT . ',' REG_INT ',' r_inmediato

    ','  shift, and go to state 62


state 42

    2 r_inicio: LABEL @1 . r_linea_ensamblador

    NL          shift, and go to state 1
    DE_DATA     shift, and go to state 2
    DE_TEXT     shift, and go to state 3
    DE_BYTE     shift, and go to state 4
    DE_HALF     shift, and go to state 5
    DE_WORD     shift, and go to state 6
    DE_DWORD    shift, and go to state 7
    DE_FLOAT    shift, and go to state 8
    DE_DOUBLE   shift, and go to state 9
    DE_SPACE    shift, and go to state 10
    INST_NOP    shift, and go to state 11
    FORM_INM_L  shift, and go to state 12
    FORM_INM_S  shift, and go to state 13
    FORM_INM_B  shift, and go to state 14
    FORM_INM_T  shift, and go to state 15
    FORM_REG_F  shift, and go to state 16
    FORM_REG_I  shift, and go to state 17

    r_linea_ensamblador  go to state 63
    r_directiva          go to state 21
    r_instruccion        go to state 22


state 43

    0 $accept: r_inicio $end .

    $default  accept


state 44

    6 r_linea_ensamblador: r_directiva NL . @2 r_inicio

    $default  reduce using rule 5 (@2)

    @2  go to state 64


state 45

    8 r_linea_ensamblador: r_instruccion NL . @3 r_inicio

    $default  reduce using rule 7 (@3)

    @3  go to state 65


state 46

   10 r_linea_ensamblador: NL @4 r_inicio .

    $default  reduce using rule 10 (r_linea_ensamblador)


state 47

   27 r_lista_enteros: T_INT_LIT . @11 r_lista_enteros_cont

    $default  reduce using rule 26 (@11)

    @11  go to state 66


state 48

   14 r_directiva: DE_BYTE @5 r_lista_enteros .

    $default  reduce using rule 14 (r_directiva)


state 49

   16 r_directiva: DE_HALF @6 r_lista_enteros .

    $default  reduce using rule 16 (r_directiva)


state 50

   18 r_directiva: DE_WORD @7 r_lista_enteros .

    $default  reduce using rule 18 (r_directiva)


state 51

   20 r_directiva: DE_DWORD @8 r_lista_enteros .

    $default  reduce using rule 20 (r_directiva)


state 52

   33 r_lista_reales: T_INT_LIT . @13 r_lista_reales_cont

    $default  reduce using rule 32 (@13)

    @13  go to state 67


state 53

   31 r_lista_reales: T_FP_LIT . @12 r_lista_reales_cont

    $default  reduce using rule 30 (@12)

    @12  go to state 68


state 54

   22 r_directiva: DE_FLOAT @9 r_lista_reales .

    $default  reduce using rule 22 (r_directiva)


state 55

   24 r_directiva: DE_DOUBLE @10 r_lista_reales .

    $default  reduce using rule 24 (r_directiva)


state 56

   43 r_instruccion: FORM_INM_L REG_INT ',' . r_inmediato '(' REG_INT ')'

    T_INT_LIT   shift, and go to state 69
    T_ALPHANUM  shift, and go to state 70

    r_inmediato  go to state 71


state 57

   41 r_instruccion: FORM_INM_L REG_FP ',' . r_inmediato '(' REG_INT ')'

    T_INT_LIT   shift, and go to state 69
    T_ALPHANUM  shift, and go to state 70

    r_inmediato  go to state 72


state 58

   44 r_instruccion: FORM_INM_S REG_INT ',' . r_inmediato '(' REG_INT ')'

    T_INT_LIT   shift, and go to state 69
    T_ALPHANUM  shift, and go to state 70

    r_inmediato  go to state 73


state 59

   42 r_instruccion: FORM_INM_S REG_FP ',' . r_inmediato '(' REG_INT ')'

    T_INT_LIT   shift, and go to state 69
    T_ALPHANUM  shift, and go to state 70

    r_inmediato  go to state 74


state 60

   45 r_instruccion: FORM_INM_B REG_INT ',' . r_posicion
   46              | FORM_INM_B REG_INT ',' . REG_INT ',' r_inmediato

    T_INT_LIT   shift, and go to state 35
    T_ALPHANUM  shift, and go to state 36
    REG_INT     shift, and go to state 75

    r_posicion  go to state 76


state 61

   48 r_instruccion: FORM_REG_F REG_FP ',' . REG_FP ',' REG_FP
   49              | FORM_REG_F REG_FP ',' . REG_FP

    REG_FP  shift, and go to state 77


state 62
